--- a/TotalWar-LoginRegister-02/src/main/resources/application.properties
+++ b/TotalWar-LoginRegister-02/src/main/resources/application.properties
@@ -1,9 +1,17 @@
 title.generic = Elije tu metodo mas facil para brindar apoyo
 server.port= 8081
 
-spring.datasource.url=jdbc:mysql://localhost:3306/totalwar
+spring.datasource.url=jdbc:mysql://localhost:3306/totalwar?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=miercoles123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=create
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+
+#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto = update
+
+logging.level.org.hibernate.SQL=DEBUG	
+logging.level.org.hibernate.type=TRACE
