--- a/TotalWar-LoginRegister-02/src/main/resources/application.properties
+++ b/TotalWar-LoginRegister-02/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.password=miercoles123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
+# The SQL dialect makes Hibernate generate better SQL for the chosen databaseRAA
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
 
